--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,17 @@
 spring.application.name=Identity-Service
 
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.open-in-view=false
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/identity_service_db
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+#spring.flyway.enabled=true
+#spring.flyway.locations=classpath:db/migration
+#spring.flyway.baseline-on-migrate=true
 
 spring.cache.type=redis
 spring.data.redis.host=localhost
