--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,17 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 #spring.flyway.enabled=true
 #spring.flyway.locations=classpath:db/migration
 #spring.flyway.baseline-on-migrate=true
+
+# Redis Configuration for Session Storage
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.data.redis.password=
+spring.data.redis.timeout=60000
+
+# Session Configuration
+spring.session.store-type=redis
+spring.session.timeout=3600
+server.servlet.session.cookie.name=JSESSIONID
+server.servlet.session.cookie.http-only=true
+server.servlet.session.cookie.secure=false
+server.servlet.session.cookie.same-site=lax
