feat: implement user roles and management
- Add Role entity and many-to-many relationship with Users
- Create V2 migration for roles and users_roles table
- Implement UserDetailsService in UserService for Spring Security
- Secure UserController endpoints with role-based access
- Add assignRoleToUser functionality
- Add RoleRepository
- Add unit tests for UserService
- Enable method security in SecurityConfig

--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,8 @@ dependencies {
     runtimeOnly 'org.postgresql:postgresql'
     runtimeOnly 'io.lettuce:lettuce-core'
     annotationProcessor 'org.projectlombok:lombok'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.security:spring-security-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
